# dotfiles

./: .Xresources  .Xresources.dottie  .alias.dottie  .aliases  .aliases.dottie  .bashrc  .bashrc.dottie  .dottie  .gdbinit  .gdbinit.dottie  .gitattributes  .gitconfig  .gitconfig.dottie  .gitignore  .gnuplot  .gnuplot.dottie  .gvimrc  .gvimrc.dottie  .inputrc  .inputrc.dottie  .isort.cfg.dottie  .npmrc  .pdbrc  .profile  .profile.dottie  .pystartup.dottie  .pythonrc.dottie  .rgignore  .shadow  .tmux.conf  .tmux.conf.dottie  .vimrc.dottie  .xinitrc##hostname.sambook  .xinitrc.dottie  LICENSE.txt  Makefile  README.md  dottie.c
.config/: compton.conf.dottie
.config/aria2/: aria2.conf
.config/awesome/: .luarc.json  autostart.lua  rc.lua  utils.lua  widget-backlight.lua  widget-battery.lua  widget-calendar.lua  widget-sensors.lua  widget-touchpad.lua
.config/awesome/support/: .clang-format  CMakeLists.txt  alsamixer.c  alsamixer.h
.config/beets/: config.yaml.dottie
.config/beets.dottie/: config.yaml
.config/compton.dottie/: compton.conf
.config/conky/: conky.conf
.config/conky.dottie/: conky.conf
.config/feh.dottie/: keys
.config/hey/: conf.toml
.config/kitty/: kitty.conf
.config/mpv/: mpv.conf
.config/mpv.dottie/: input.conf  mpv.conf
.config/nvim/: .luarc.json  init.lua  init.vim  plug.vim
.config/nvim.dottie/: init.vim  plug.vim
.config/picom.dottie/: picom.conf
.config/python/: startup.py
.config/rofi/: dmenu-custom.rasi
.config/tmux/: tmux.conf
.fluxbox/: init  menu  traylist
.fluxbox.dottie/: apps  init  keys  startup  traylist  windowmenu
.github/: README.md
.icons.dottie/: hicolor
.mpv.dottie/: config
.vim/: neobundlerc.dottie
.vim.dottie/: neobundlerc  plugrc
Windows/: SamsungNP530.reg  Win10-disable-onedrive.bat  Win10-uninstall-msware.ps1  Win10-uninstall-msware.ps2
linux/: np530.config
windows/: Win10-disable-diagnostics.bat
(+45 files in other folders)
